# FuseGame

./: CMakeLists.txt  README.md  config.rc
Resources/AudioSources/Raw/EnemyShot/: EnemyShot.veg  LaserShots.mp3.sfk
Resources/AudioSources/Raw/LaserCharge/: ChargeShot.mp3.sfk  ChargeShot2.sfk  ChargeShotSlow.mp3.sfk  LaserCharge.veg  LaserCharge.veg.bak
Resources/AudioSources/Raw/MassiveBang/: 0017_explo_bomb_01_PremiumBeat.sfk  0017_explo_bomb_02_PremiumBeat.sfk  Explosions.mp4.sfk  MassiveBang.veg  MassiveBang.veg.bak
Resources/AudioSources/Raw/SawIdle/: Saw2.mp4.sfk  SawIdle.veg
Resources/Enemy/: AngerSmile.psd  Crown of thorns.psd
Resources/Explosion/MassiveExplosion/: MassiveExplosion adobe after effects.aep
Resources/Icon/: FuseGameIcon.cpp  FuseGameIcon.hpp
Resources/ImageSources/8March/: March8.veg  March8SpriteSheet.txt  coub-1ocsz7.mp4.sfk
Resources/Player/: Player.psd
SRC/: main.cpp
SRC/Animations/Explosion/: Explosion.cpp  Explosion.hpp
SRC/Animations/FrameByFrame/: FrameByFrame.cpp  FrameByFrame.hpp
SRC/Animations/HitpointsDecrease/: HitpointsDecrease.cpp  HitpointsDecrease.hpp
SRC/Animations/LinearDeath/: LinearDeath.cpp  LinearDeath.hpp
SRC/Animations/Rotation/: Rotation.cpp  Rotation.hpp
SRC/AudioPlayer/: AudioPlayer.cpp  AudioPlayer.hpp
SRC/AudioPlayer/MusicPlayer/: MusicPlayer.cpp  MusicPlayer.hpp
SRC/AudioPlayer/SoundPlayer/: SoundPlayer.cpp  SoundPlayer.hpp
SRC/Enemy/: Enemy.cpp  Enemy.hpp
SRC/EnemyStorage/: EnemyStorage.cpp  EnemyStorage.hpp
SRC/Game/: Game.cpp  Game.hpp
SRC/Lasers/LasersController/: LasersController.cpp  LasersController.hpp
SRC/Lasers/MassiveLaser/: FlyingMassiveBeam.cpp  FlyingMassiveBeam.hpp  GenerateBeam.cpp  GenerateBeam.hpp
SRC/Lasers/SimpleLaser/: FlyingSimpleBeam.cpp  FlyingSimpleBeam.hpp
SRC/March8/: March8.cpp  March8.hpp
SRC/Player/: Player.cpp  Player.hpp
SRC/Stats/: Stats.cpp  Stats.hpp  StatsData.hpp
SRC/Utility/: GameObject.hpp  MovementBorders.hpp  Observer.hpp  Updateable.hpp
SRC/Utility/IndexDataFile/: IndexDataFile.cpp  IndexDataFile.hpp
SRC/Utility/Math/: Math.hpp
SRC/Utility/Math/Circle/: Circle.cpp  Circle.hpp
SRC/Utility/Math/Line/: Line.cpp  Line.hpp
SRC/Utility/Math/Parabola/: Parabola.cpp  Parabola.hpp
SRC/Utility/Math/Random/: Random.cpp  Random.hpp
SRC/Utility/Math/Vectors/: Vectors.cpp  Vectors.hpp
SRC/Utility/MemoryTextureStorage/: MemoryTextureStorage.cpp  MemoryTextureStorage.hpp
SRC/Utility/ProgramEvents/: ProgramEvents.cpp  ProgramEvents.hpp
SRC/Utility/Resources/: Resources.cpp  Resources.hpp
SRC/Utility/Time/: Stopwatch.hpp  Timer.hpp
SRC/Utility/WindowForTests/: WindowForTests.cpp  WindowForTests.hpp
